Local developer's setup, connection to SMART on FHIR Sandbox.
