# orchestrator/outbound/api/openapi.yaml
@@ -96,8 +96,12 @@ paths:
           content:
             application/json:
               schema:
-                type: object
+                $ref: "#/components/schemas/FHIRBundle"
         "409":
           description: The result of the exchange is not yet available.
         "404":
           description: The exchange with the given ID does not exist.
+components:
+  schemas:
+    FHIRBundle:
+      type: object
